[package]
name = "secp256k1-wasm"
version = "0.0.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
description = "A Rust library for building tiny-secp256k1 WASM."
rust-version = "1.50"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# `[patch.crates-io]` is not working :(
# This commit is where secp256k1-sys version changed to 0.4.1
byteorder = { version = "1.4.3", default-features = false }
secp256k1-sys = { version = "0.4.1", default-features = false,  features=["recovery"], git = "https://github.com/steel97/rust-secp256k1", rev = "badffba8d5b188eb3f51ede282a4285b26d551a1" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
