[package]
name = "secp256k1-wasm"
version = "0.0.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
description = "A Rust library for building tiny-secp256k1 WASM."
rust-version = "1.50"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
secp256k1-sys = { version = "0.4.1", default-features = false,  features=["recovery"], git = "https://github.com/steel97/rust-secp256k1", rev = "12cdce52f7e89f2eefd7bba1e0d1bde52fa1e521" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
